# janus-tensor-dual

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
src/: dual.hpp
src/cpp/: bindings_fwd.hpp  cudatensordense.cu  cudatensordense.hpp  cudatensorsparse.cu  cudualtensordense.hpp  cudualtensorsparse.hpp  dual.hpp  janus_module.cpp  janus_util.hpp  tensor_dual_bindings.cpp  tensor_hyperdual_bindings.cpp  tensor_matdual_bindings.cpp  tensor_mathyperdual_bindings.cpp  tensordual.hpp  tensordual_sparse.h  tensorhyperdual.hpp  tensormatdual.hpp  tensormathyperdual.hpp
tests/cpp/: CMakeLists.txt  tensordual_test.cpp  tensordualcuda_sparse_test.cu  tensordualcuda_test.cu
